# Truckzone

./: .gitignore  BEFORE_AFTER_COMPARISON.md  CLEANUP_SUMMARY.md  DEPLOYMENT_NEEDED.md  FILES_UPDATED.txt  IMPLEMENTATION_COMPLETE.md  MOBILE_APP_FEATURE_PARITY.md  MOBILE_APP_QUICK_SUMMARY.md  MOBILE_APP_SIMPLIFICATION.md  MOBILE_APP_UPDATE_SUMMARY.md  MOBILE_NAVIGATION_FIX.md  MOBILE_NAV_CHANGES_SUMMARY.md  MOBILE_NAV_REDESIGN.md  MOBILE_NAV_TESTING_GUIDE.md  MOBILE_NAV_TEST_GUIDE.md  MOBILE_NAV_VISUAL_GUIDE.md  MOBILE_TESTING_GUIDE.md  MOBILE_UI_FIXES_SUMMARY.md  NAVIGATION_FIX_SUMMARY.md  PM_CHECKLIST_MOBILE_UPDATES.md  PM_CHECKLIST_QUICK_REFERENCE.md  PM_CHECKLIST_REDESIGN.md  PM_INSPECTION_FINAL_UPDATES.md  PRODUCT_REMOVAL_FIX.md  Procfile  QUICK_FIX_REFERENCE.md  QUICK_MOBILE_NAV_SETUP.md  QUICK_REFERENCE.md  README.md  README_UI_ENHANCEMENTS.md  SERVICE_PAGE_ANIMATIONS_GUIDE.md  TESTING_GUIDE.md  UI_ENHANCEMENTS_SUMMARY.md  VISUAL_IMPROVEMENTS_GUIDE.md  WHY_CHOOSE_SECTION_IMPROVEMENTS.md  WORKORDER_UI_IMPROVEMENTS.md  check_db_schema.py  debug_job_start.py  deploy_mobile_fix.py  deploy_ui_enhancements.sh  (+20 more)
company_core/: MANIFEST.in  pyproject.toml  recurring_worker.sh
company_core/accounts/: activity.py  admin.py  ai_service.py  apps.py  backends.py  clover_service.py  clover_views.py  context_processors.py  cron.py  customer_ai.py  decorators.py  excel_formatting.py  forms.py  invoice_activity.py  invoice_utils.py  legal_views.py  middleware.py  models.py  noteview.py  paid_invoice_views.py  payroll_utils.py  payroll_views.py  pdf_utils.py  public_ai.py  tests.py  (+21 more)
(+458 files in other folders)
